# overture

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  bool.dats  control.dats  control.plu  control_example.dats  fby.dats  flow.sats  generic.dats  infer.dats  rat.sats  sampling-infer.dats  sampling.dats  tail.dats
.github/workflows/: ci.yml
contrib/kernelats/: README.md
examples/mps2/: Makefile  heartbeat.expected  heartbeat.ovt
prelude/: .gitignore  README  corelang.ml  corelang.mli  main.ml  sampling-easy.plu  sampling-hard.plu  sampling.plu
prelude-src/: AUTHORS.txt  INSTALL  README  _oasis  _tags  install.sh  preludec  setup.data  setup.ml
prelude-src/Exemples/sampling_loop/: CMakeLists.txt  FindLTTng.cmake  FindPrelude.cmake  Makefile  README  main_marte.c  sampling.plu  sampling_includes.h
share/: mkrelease.sh
src/: Makefile  overture_ccomp.dats  overture_ccomp.sats  overture_constraint.dats  overture_constraint.sats  overture_erasure.dats  overture_erasure.sats  overture_error.dats  overture_error.sats  overture_fixity.dats  overture_fixity.sats  overture_lexing.dats  overture_lexing.sats  overture_location.dats  overture_location.sats  overture_main.dats  overture_parsing.dats  overture_parsing.sats  overture_solver.dats  overture_solver.sats  overture_staexp.dats  overture_staexp.sats  overture_symbol.dats  overture_symbol.sats  overture_syntax.dats  overture_syntax.sats  overture_trans12.dats  overture_trans12.sats  overture_trans3.dats  overture_trans3.sats
tests/: run_tests.sh
travis-ci/: installpkg.sh
(+117 files in other folders)
